--- a/TP2/AndroidApp/HappiBee/app/src/main/AndroidManifest.xml
+++ b/TP2/AndroidApp/HappiBee/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />  <!-- Internet permission to access the API -->
     <application
+        android:usesCleartextTraffic="true"
         android:name=".HappiBeeApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
