Added transumancia featues. Also added feature to add and view inspecoes. (branch mistake)

--- a/TP2/AndroidApp/HappiBee/app/src/main/AndroidManifest.xml
+++ b/TP2/AndroidApp/HappiBee/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />  <!-- Internet permission to access the API -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- Location permission -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:usesCleartextTraffic="true"
         android:name=".HappiBeeApp"
